--- a/jmcmod/build.gradle
+++ b/jmcmod/build.gradle
@@ -14,8 +14,8 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 
 version = "0.4"
-group = "kr.pe.ecmaxp.umpoc"
-archivesBaseName = "umpoc"
+group = "kr.pe.ecmaxp.openpie"
+archivesBaseName = "openpie"
 
 sourceCompatibility = targetCompatibility = '1.8'
 compileJava {
