umpoc 에서 openpie로 이름 변경 (umport -> oprom, umpsim -> opsim)

--- a/oprom/Makefile
+++ b/oprom/Makefile
@@ -28,7 +28,7 @@ else
 CFLAGS += -Os -DNDEBUG
 endif
 
-LDFLAGS = -nostdlib -T umport.ld -Map=$@.map --cref
+LDFLAGS = -nostdlib -T openpie.ld -Map=$@.map --cref
 LIBS = $(shell $(CC) $(CFLAGS) -print-libgcc-file-name)
 
 # Remove uncalled code from the final image.
