MICROPY_MODULE_FROZEN_STR=1 로 설정

--- a/oprom/Makefile
+++ b/oprom/Makefile
@@ -3,6 +3,7 @@ include ../micropython/py/mkenv.mk
 # qstr definitions (must come before including py.mk)
 QSTR_DEFS = qstrdefsport.h
 
+FROZEN_DIR = scripts
 FROZEN_MPY_DIR = modules
 
 BUILD = build
