--- a/opmod/build.gradle
+++ b/opmod/build.gradle
@@ -1,4 +1,5 @@
 buildscript {
+    ext.kotlin_version = '1.2.70'
     repositories {
         jcenter()
         maven {
@@ -9,10 +10,12 @@ buildscript {
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
         classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'kotlin'
 
 version = "0.7"
 group = "kr.pe.ecmaxp.openpie"
@@ -37,6 +40,10 @@ repositories {
         name = "cil.li"
         url = "http://maven.cil.li/"
     }
+	maven {
+		url = "http://maven.shadowfacts.net/"
+	}
+    mavenCentral()
 }
 
 shadowJar {
@@ -45,6 +52,8 @@ shadowJar {
     dependencies {
         //noinspection GroovyAssignabilityCheck
         exclude(dependency("li.cil.oc:OpenComputers:MC1.12.2-1.7.+:api"))
+        //noinspection GroovyAssignabilityCheck
+        exclude(dependency("net.shadowfacts:Forgelin:1.7.3"))
     }
 
     relocate 'org.msgpack', 'kr.pe.ecmaxp.relocated.org.msgpack'
@@ -53,6 +62,11 @@ shadowJar {
 dependencies {
     compile "li.cil.oc:OpenComputers:MC1.12.2-1.7.+:api"
     compile 'org.msgpack:msgpack-core:0.8.16'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "net.shadowfacts:Forgelin:LATEST_VERSION"
+
+    compile group: "net.shadowfacts", name: "Forgelin", version: "1.7.3"
+    compile group: "org.jetbrains.kotlin", name: "kotlin-stdlib", version: kotlin_version
 }
 
 processResources {
@@ -66,5 +80,15 @@ processResources {
         
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
+    }
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
