-fno-jump-tables 활성화 (Makefile)

--- a/oprom/Makefile
+++ b/oprom/Makefile
@@ -26,6 +26,7 @@ CFLAGS_MCU_m0 = $(CFLAGS_CORTEX_M) -mtune=cortex-m0 -mcpu=cortex-m0 -mfloat-abi=
 CFLAGS = $(INC) -Wall -Werror -std=c99 -nostdlib $(CFLAGS_MCU_m0) $(COPT)
 CFLAGS += -DMP_CONFIGFILE="<mpconfigport.h>"
 CFLAGS += -DMPACK_HAS_CONFIG=1
+CFLAGS += -fno-jump-tables
 
 #Debugging/Optimization
 ifeq ($(DEBUG), 1)
