oprom을 -Os 대신 -O2 로 컴파일

--- a/oprom/Makefile
+++ b/oprom/Makefile
@@ -33,7 +33,7 @@ MPY_CROSS_FLAGS += -mcache-lookup-bc
 ifeq ($(DEBUG), 1)
 CFLAGS += -O0 -ggdb
 else
-CFLAGS += -Os -DNDEBUG
+CFLAGS += -O2 -DNDEBUG
 endif
 
 
