--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "micropython"]
 	path = micropython
-	url = git@github.com:micropython/micropython.git
+url=git@github.com:EcmaXp/micropython.git
