--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "micropython"]
 	path = micropython
 url=git@github.com:EcmaXp/micropython.git
+[submodule "micropython-lib"]
+	path = micropython-lib
+	url = https://github.com/micropython/micropython-lib.git
