--- a/opmod/gradle.properties
+++ b/opmod/gradle.properties
@@ -1,3 +1,14 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+# forge_gradle_version = 2.3-SNAPSHOT
+java_version = 1.8
+forgelin_version = 1.7.3
+# kotlin_version = 1.2.70
+
+minecraft_version=1.12.2
+minecraft_mappings=snapshot_20180704
+forge_version=14.23.4.2727
+
+mod_name=OpenPython
+mod_version=1.0.1
+mod_group=kr.pe.ecmaxp.openpython
+
+opencomputers_version = 1.7
